# bluepill-rust-base

./: Cargo.toml  README.md  flash.sh  openocd.cfg  openocd_just_flash_and_run.gdb
.cargo/: config
src/: main.rs
